Fix shift of DE [IP-249]

--- a/frontend/scss/organisms/_o-digital-explorer.scss
+++ b/frontend/scss/organisms/_o-digital-explorer.scss
@@ -3,6 +3,7 @@ body {
 }
 
 html:has(.o-digital-explorer) {
+  left: unset !important;
   right: unset !important;
 }
 
